0.3
---

  - The setting ``pyshop.satanize.reg`` has been renamed
to ``pyshop.satanize.regex``
  - The setting ``cookie_key`` has been renamed to ``pyshop.cookie_key``
  - Fix bug on package upload. don't close the stream while writing it.

0.2
---

Packaging Issue.


0.1
---

Initial version.

  - work with pip, setuptools
  - mirror packages
  - upload packages
  - secure access with login/password
  - create/update accounts
  - tests for python 2.7 only
  - compatible with python 2.6